# Q2RTX

./: CMakeLists.txt
baseq2/: q2rtx.menu
doc/: client.md
inc/client/: video.h
inc/refresh/: refresh.h
inc/shared/: shared.h
src/: CMakeLists.txt
src/client/: effects.c  entities.c  refresh.c  screen.c  tent.c
src/client/ui/: playerconfig.c
src/refresh/: images.c  models.c
src/refresh/dx12/: main.c
src/server/: game.c
